src/iotsuite/parser/NetworkSpecParser.java
<<<<<<< HEAD
// $ANTLR 3.5.1 S:\\Thesis\\DevelopmentFramework\\ToolSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g 2015-11-19 18:12:23

package iotsuite.parser;

import iotsuite.compiler.*;
import iotsuite.semanticmodel.*;
=======
// $ANTLR 3.5.1 C:\\IoTSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g 2015-11-18 23:59:17

package iotsuite.parser;
import iotsuite.compiler.*; 
import iotsuite.semanticmodel.*;  

>>>>>>> f18db808215aa7c0212c33614ab0a8c9dea732b4

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class NetworkSpecParser extends Parser {
<<<<<<< HEAD
	public static final String[] tokenNames = new String[] { "<invalid>",
			"<EOR>", "<DOWN>", "<UP>", "CAPITALIZED_ID", "DESCRIPTION_ID",
			"ID", "MOBILEFLAG", "WS", "'\"'", "','", "':'", "';'",
			"'database'", "'description'", "'devices'", "'location'",
			"'platform'", "'protocol'", "'resources'" };
	public static final int EOF = -1;
	public static final int T__9 = 9;
	public static final int T__10 = 10;
	public static final int T__11 = 11;
	public static final int T__12 = 12;
	public static final int T__13 = 13;
	public static final int T__14 = 14;
	public static final int T__15 = 15;
	public static final int T__16 = 16;
	public static final int T__17 = 17;
	public static final int T__18 = 18;
	public static final int T__19 = 19;
	public static final int CAPITALIZED_ID = 4;
	public static final int DESCRIPTION_ID = 5;
	public static final int ID = 6;
	public static final int MOBILEFLAG = 7;
	public static final int WS = 8;
=======
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "CAPITALIZED_ID", "DESCRIPTION_ID", 
		"ID", "MOBILEFLAG", "WS", "'\"'", "','", "':'", "';'", "'database'", "'description'", 
		"'devices'", "'location'", "'platform'", "'protocol'", "'resources'"
	};
	public static final int EOF=-1;
	public static final int T__9=9;
	public static final int T__10=10;
	public static final int T__11=11;
	public static final int T__12=12;
	public static final int T__13=13;
	public static final int T__14=14;
	public static final int T__15=15;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int CAPITALIZED_ID=4;
	public static final int DESCRIPTION_ID=5;
	public static final int ID=6;
	public static final int MOBILEFLAG=7;
	public static final int WS=8;
>>>>>>> f18db808215aa7c0212c33614ab0a8c9dea732b4

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators

<<<<<<< HEAD
	public NetworkSpecParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}

=======

	public NetworkSpecParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
>>>>>>> f18db808215aa7c0212c33614ab0a8c9dea732b4
	public NetworkSpecParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

<<<<<<< HEAD
	@Override
	public String[] getTokenNames() {
		return NetworkSpecParser.tokenNames;
	}

	@Override
	public String getGrammarFileName() {
		return "S:\\Thesis\\DevelopmentFramework\\ToolSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g";
	}

	// Initialize the context
	private SymbolTable context;

	// $ANTLR start "networkspec"
	// S:\\Thesis\\DevelopmentFramework\\ToolSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:23:1:
	// networkspec : 'devices' ':' ( device_def )* ;
	public final void networkspec() throws RecognitionException {
		try {
			// S:\\Thesis\\DevelopmentFramework\\ToolSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:23:12:
			// ( 'devices' ':' ( device_def )* )
			// S:\\Thesis\\DevelopmentFramework\\ToolSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:24:7:
			// 'devices' ':' ( device_def )*
			{
				match(input, 15, FOLLOW_15_in_networkspec58);
				match(input, 11, FOLLOW_11_in_networkspec60);
				context = new SymbolTable();

				// S:\\Thesis\\DevelopmentFramework\\ToolSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:27:8:
				// ( device_def )*
				loop1: while (true) {
					int alt1 = 2;
					int LA1_0 = input.LA(1);
					if ((LA1_0 == CAPITALIZED_ID || LA1_0 == ID)) {
						alt1 = 1;
					}

					switch (alt1) {
					case 1:
					// S:\\Thesis\\DevelopmentFramework\\ToolSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:27:9:
					// device_def
					{
						pushFollow(FOLLOW_device_def_in_networkspec78);
						device_def();
						state._fsp--;

					}
						break;

					default:
						break loop1;
					}
				}

			}

		} catch (RecognitionException re) {
			reportError(re);
			recover(input, re);
		} finally {
			// do for sure before leaving
		}
	}

	// $ANTLR end "networkspec"

	// $ANTLR start "device_def"
	// S:\\Thesis\\DevelopmentFramework\\ToolSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:30:1:
	// device_def : deviceName= ( ID | CAPITALIZED_ID ) ':' 'location' ':' (
	// location_def )* 'platform' ':' ( device_type )* ';' 'resources' ':' (
	// abilities_def )? ';' 'protocol' ':' ( protocol_value )* ';' ( 'database'
	// ':' database_def ';' )* 'description' ':' ( description_def )* ';' ;
	public final void device_def() throws RecognitionException {
		Token deviceName = null;

		try {
			// S:\\Thesis\\DevelopmentFramework\\ToolSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:30:11:
			// (deviceName= ( ID | CAPITALIZED_ID ) ':' 'location' ':' (
			// location_def )* 'platform' ':' ( device_type )* ';' 'resources'
			// ':' ( abilities_def )? ';' 'protocol' ':' ( protocol_value )* ';'
			// ( 'database' ':' database_def ';' )* 'description' ':' (
			// description_def )* ';' )
			// S:\\Thesis\\DevelopmentFramework\\ToolSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:31:4:
			// deviceName= ( ID | CAPITALIZED_ID ) ':' 'location' ':' (
			// location_def )* 'platform' ':' ( device_type )* ';' 'resources'
			// ':' ( abilities_def )? ';' 'protocol' ':' ( protocol_value )* ';'
			// ( 'database' ':' database_def ';' )* 'description' ':' (
			// description_def )* ';'
			{
				deviceName = input.LT(1);
				if (input.LA(1) == CAPITALIZED_ID || input.LA(1) == ID) {
					input.consume();
					state.errorRecovery = false;
				} else {
					MismatchedSetException mse = new MismatchedSetException(
							null, input);
					throw mse;
				}
				match(input, 11, FOLLOW_11_in_device_def114);

				context.currentNetwork = new DeviceCompiler();
				context.currentNetwork
						.setDeviceName((deviceName != null ? deviceName
								.getText() : null));

				match(input, 16, FOLLOW_16_in_device_def129);
				match(input, 11, FOLLOW_11_in_device_def131);
				// S:\\Thesis\\DevelopmentFramework\\ToolSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:36:20:
				// ( location_def )*
				loop2: while (true) {
					int alt2 = 2;
					int LA2_0 = input.LA(1);
					if ((LA2_0 == CAPITALIZED_ID)) {
						alt2 = 1;
					}

					switch (alt2) {
					case 1:
					// S:\\Thesis\\DevelopmentFramework\\ToolSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:36:21:
					// location_def
					{
						pushFollow(FOLLOW_location_def_in_device_def134);
						location_def();
						state._fsp--;

					}
						break;

					default:
						break loop2;
					}
				}

				match(input, 17, FOLLOW_17_in_device_def143);
				match(input, 11, FOLLOW_11_in_device_def145);
				// S:\\Thesis\\DevelopmentFramework\\ToolSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:37:20:
				// ( device_type )*
				loop3: while (true) {
					int alt3 = 2;
					int LA3_0 = input.LA(1);
					if ((LA3_0 == CAPITALIZED_ID)) {
						alt3 = 1;
					}

					switch (alt3) {
					case 1:
					// S:\\Thesis\\DevelopmentFramework\\ToolSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:37:21:
					// device_type
					{
						pushFollow(FOLLOW_device_type_in_device_def148);
						device_type();
						state._fsp--;

					}
						break;

					default:
						break loop3;
					}
				}

				match(input, 12, FOLLOW_12_in_device_def152);
				match(input, 19, FOLLOW_19_in_device_def159);
				match(input, 11, FOLLOW_11_in_device_def161);
				// S:\\Thesis\\DevelopmentFramework\\ToolSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:38:21:
				// ( abilities_def )?
				int alt4 = 2;
				int LA4_0 = input.LA(1);
				if ((LA4_0 == CAPITALIZED_ID)) {
					alt4 = 1;
				}
				switch (alt4) {
				case 1:
				// S:\\Thesis\\DevelopmentFramework\\ToolSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:38:22:
				// abilities_def
				{
=======
	@Override public String[] getTokenNames() { return NetworkSpecParser.tokenNames; }
	@Override public String getGrammarFileName() { return "C:\\IoTSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g"; }


	  //Initialize the context
	  private SymbolTable context; 



	// $ANTLR start "networkspec"
	// C:\\IoTSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:23:1: networkspec : 'devices' ':' ( device_def )* ;
	public final void networkspec() throws RecognitionException {
		try {
			// C:\\IoTSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:23:12: ( 'devices' ':' ( device_def )* )
			// C:\\IoTSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:24:7: 'devices' ':' ( device_def )*
			{
			match(input,15,FOLLOW_15_in_networkspec58); 
			match(input,11,FOLLOW_11_in_networkspec60); 
			 context = new SymbolTable();
			      
			// C:\\IoTSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:27:8: ( device_def )*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==CAPITALIZED_ID||LA1_0==ID) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// C:\\IoTSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:27:9: device_def
					{
					pushFollow(FOLLOW_device_def_in_networkspec78);
					device_def();
					state._fsp--;

					}
					break;

				default :
					break loop1;
				}
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "networkspec"



	// $ANTLR start "device_def"
	// C:\\IoTSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:30:1: device_def : deviceName= ( ID | CAPITALIZED_ID ) ':' 'location' ':' ( location_def )* 'platform' ':' ( device_type )* ';' 'resources' ':' ( abilities_def )? ';' 'protocol' ':' ( protocol_value )* ';' ( 'database' ':' database_def ';' )* 'description' ':' ( description_def )* ';' ;
	public final void device_def() throws RecognitionException {
		Token deviceName=null;

		try {
			// C:\\IoTSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:30:11: (deviceName= ( ID | CAPITALIZED_ID ) ':' 'location' ':' ( location_def )* 'platform' ':' ( device_type )* ';' 'resources' ':' ( abilities_def )? ';' 'protocol' ':' ( protocol_value )* ';' ( 'database' ':' database_def ';' )* 'description' ':' ( description_def )* ';' )
			// C:\\IoTSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:31:4: deviceName= ( ID | CAPITALIZED_ID ) ':' 'location' ':' ( location_def )* 'platform' ':' ( device_type )* ';' 'resources' ':' ( abilities_def )? ';' 'protocol' ':' ( protocol_value )* ';' ( 'database' ':' database_def ';' )* 'description' ':' ( description_def )* ';'
			{
			deviceName=input.LT(1);
			if ( input.LA(1)==CAPITALIZED_ID||input.LA(1)==ID ) {
				input.consume();
				state.errorRecovery=false;
			}
			else {
				MismatchedSetException mse = new MismatchedSetException(null,input);
				throw mse;
			}
			match(input,11,FOLLOW_11_in_device_def114); 
			 
			   context.currentNetwork = new DeviceCompiler();
			   context.currentNetwork.setDeviceName((deviceName!=null?deviceName.getText():null));
			   
			match(input,16,FOLLOW_16_in_device_def129); 
			match(input,11,FOLLOW_11_in_device_def131); 
			// C:\\IoTSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:36:20: ( location_def )*
			loop2:
			while (true) {
				int alt2=2;
				int LA2_0 = input.LA(1);
				if ( (LA2_0==CAPITALIZED_ID) ) {
					alt2=1;
				}

				switch (alt2) {
				case 1 :
					// C:\\IoTSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:36:21: location_def
					{
					pushFollow(FOLLOW_location_def_in_device_def134);
					location_def();
					state._fsp--;

					}
					break;

				default :
					break loop2;
				}
			}

			match(input,17,FOLLOW_17_in_device_def143); 
			match(input,11,FOLLOW_11_in_device_def145); 
			// C:\\IoTSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:37:20: ( device_type )*
			loop3:
			while (true) {
				int alt3=2;
				int LA3_0 = input.LA(1);
				if ( (LA3_0==CAPITALIZED_ID) ) {
					alt3=1;
				}

				switch (alt3) {
				case 1 :
					// C:\\IoTSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:37:21: device_type
					{
					pushFollow(FOLLOW_device_type_in_device_def148);
					device_type();
					state._fsp--;

					}
					break;

				default :
					break loop3;
				}
			}

			match(input,12,FOLLOW_12_in_device_def152); 
			match(input,19,FOLLOW_19_in_device_def159); 
			match(input,11,FOLLOW_11_in_device_def161); 
			// C:\\IoTSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:38:21: ( abilities_def )?
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==CAPITALIZED_ID) ) {
				alt4=1;
			}
			switch (alt4) {
				case 1 :
					// C:\\IoTSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:38:22: abilities_def
					{
>>>>>>> f18db808215aa7c0212c33614ab0a8c9dea732b4
					pushFollow(FOLLOW_abilities_def_in_device_def164);
					abilities_def();
					state._fsp--;

<<<<<<< HEAD
				}
					break;

				}

				match(input, 12, FOLLOW_12_in_device_def169);
				match(input, 18, FOLLOW_18_in_device_def175);
				match(input, 11, FOLLOW_11_in_device_def177);
				// S:\\Thesis\\DevelopmentFramework\\ToolSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:39:20:
				// ( protocol_value )*
				loop5: while (true) {
					int alt5 = 2;
					int LA5_0 = input.LA(1);
					if ((LA5_0 == ID)) {
						alt5 = 1;
					}

					switch (alt5) {
					case 1:
					// S:\\Thesis\\DevelopmentFramework\\ToolSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:39:21:
					// protocol_value
					{
						pushFollow(FOLLOW_protocol_value_in_device_def180);
						protocol_value();
						state._fsp--;

					}
						break;

					default:
						break loop5;
					}
				}

				match(input, 12, FOLLOW_12_in_device_def184);
				// S:\\Thesis\\DevelopmentFramework\\ToolSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:40:5:
				// ( 'database' ':' database_def ';' )*
				loop6: while (true) {
					int alt6 = 2;
					int LA6_0 = input.LA(1);
					if ((LA6_0 == 13)) {
						alt6 = 1;
					}

					switch (alt6) {
					case 1:
					// S:\\Thesis\\DevelopmentFramework\\ToolSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:40:6:
					// 'database' ':' database_def ';'
					{
						match(input, 13, FOLLOW_13_in_device_def192);
						match(input, 11, FOLLOW_11_in_device_def194);
						pushFollow(FOLLOW_database_def_in_device_def196);
						database_def();
						state._fsp--;

						match(input, 12, FOLLOW_12_in_device_def198);
					}
						break;

					default:
						break loop6;
					}
				}

				match(input, 14, FOLLOW_14_in_device_def215);
				match(input, 11, FOLLOW_11_in_device_def217);
				// S:\\Thesis\\DevelopmentFramework\\ToolSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:41:25:
				// ( description_def )*
				loop7: while (true) {
					int alt7 = 2;
					int LA7_0 = input.LA(1);
					if ((LA7_0 == 9)) {
						alt7 = 1;
					}

					switch (alt7) {
					case 1:
					// S:\\Thesis\\DevelopmentFramework\\ToolSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:41:26:
					// description_def
					{
						pushFollow(FOLLOW_description_def_in_device_def221);
						description_def();
						state._fsp--;

					}
						break;

					default:
						break loop7;
					}
				}

				match(input, 12, FOLLOW_12_in_device_def226);
				context.currentNetwork.addDeviceObj();
			}

		} catch (RecognitionException re) {
			reportError(re);
			recover(input, re);
		} finally {
			// do for sure before leaving
		}
	}

	// $ANTLR end "device_def"

	// $ANTLR start "location_def"
	// S:\\Thesis\\DevelopmentFramework\\ToolSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:45:1:
	// location_def : CAPITALIZED_ID ':' ID ';' ;
	public final void location_def() throws RecognitionException {
		Token CAPITALIZED_ID1 = null;
		Token ID2 = null;

		try {
			// S:\\Thesis\\DevelopmentFramework\\ToolSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:45:14:
			// ( CAPITALIZED_ID ':' ID ';' )
			// S:\\Thesis\\DevelopmentFramework\\ToolSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:46:5:
			// CAPITALIZED_ID ':' ID ';'
			{
				CAPITALIZED_ID1 = (Token) match(input, CAPITALIZED_ID,
						FOLLOW_CAPITALIZED_ID_in_location_def262);
				match(input, 11, FOLLOW_11_in_location_def264);
				ID2 = (Token) match(input, ID, FOLLOW_ID_in_location_def266);
				match(input, 12, FOLLOW_12_in_location_def268);
				context.currentNetwork
						.addRegionLabel((CAPITALIZED_ID1 != null ? CAPITALIZED_ID1
								.getText() : null));
				context.currentNetwork.addRegionValue((ID2 != null ? ID2
						.getText() : null));
			}

		} catch (RecognitionException re) {
			reportError(re);
			recover(input, re);
		} finally {
			// do for sure before leaving
		}
	}

	// $ANTLR end "location_def"

	// $ANTLR start "device_type"
	// S:\\Thesis\\DevelopmentFramework\\ToolSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:52:1:
	// device_type : CAPITALIZED_ID ;
	public final void device_type() throws RecognitionException {
		Token CAPITALIZED_ID3 = null;

		try {
			// S:\\Thesis\\DevelopmentFramework\\ToolSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:52:13:
			// ( CAPITALIZED_ID )
			// S:\\Thesis\\DevelopmentFramework\\ToolSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:53:6:
			// CAPITALIZED_ID
			{
				CAPITALIZED_ID3 = (Token) match(input, CAPITALIZED_ID,
						FOLLOW_CAPITALIZED_ID_in_device_type295);
				context.currentNetwork
						.setDeviceType((CAPITALIZED_ID3 != null ? CAPITALIZED_ID3
								.getText() : null));
			}

		} catch (RecognitionException re) {
			reportError(re);
			recover(input, re);
		} finally {
			// do for sure before leaving
		}
	}

	// $ANTLR end "device_type"

	// $ANTLR start "abilities_def"
	// S:\\Thesis\\DevelopmentFramework\\ToolSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:57:1:
	// abilities_def : CAPITALIZED_ID ( ',' abilities_def )? ;
	public final void abilities_def() throws RecognitionException {
		Token CAPITALIZED_ID4 = null;

		try {
			// S:\\Thesis\\DevelopmentFramework\\ToolSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:57:15:
			// ( CAPITALIZED_ID ( ',' abilities_def )? )
			// S:\\Thesis\\DevelopmentFramework\\ToolSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:58:4:
			// CAPITALIZED_ID ( ',' abilities_def )?
			{
				CAPITALIZED_ID4 = (Token) match(input, CAPITALIZED_ID,
						FOLLOW_CAPITALIZED_ID_in_abilities_def314);
				// S:\\Thesis\\DevelopmentFramework\\ToolSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:58:19:
				// ( ',' abilities_def )?
				int alt8 = 2;
				int LA8_0 = input.LA(1);
				if ((LA8_0 == 10)) {
					alt8 = 1;
				}
				switch (alt8) {
				case 1:
				// S:\\Thesis\\DevelopmentFramework\\ToolSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:58:20:
				// ',' abilities_def
				{
					match(input, 10, FOLLOW_10_in_abilities_def317);
=======
					}
					break;

			}

			match(input,12,FOLLOW_12_in_device_def169); 
			match(input,18,FOLLOW_18_in_device_def175); 
			match(input,11,FOLLOW_11_in_device_def177); 
			// C:\\IoTSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:39:20: ( protocol_value )*
			loop5:
			while (true) {
				int alt5=2;
				int LA5_0 = input.LA(1);
				if ( (LA5_0==ID) ) {
					alt5=1;
				}

				switch (alt5) {
				case 1 :
					// C:\\IoTSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:39:21: protocol_value
					{
					pushFollow(FOLLOW_protocol_value_in_device_def180);
					protocol_value();
					state._fsp--;

					}
					break;

				default :
					break loop5;
				}
			}

			match(input,12,FOLLOW_12_in_device_def184); 
			// C:\\IoTSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:40:5: ( 'database' ':' database_def ';' )*
			loop6:
			while (true) {
				int alt6=2;
				int LA6_0 = input.LA(1);
				if ( (LA6_0==13) ) {
					alt6=1;
				}

				switch (alt6) {
				case 1 :
					// C:\\IoTSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:40:6: 'database' ':' database_def ';'
					{
					match(input,13,FOLLOW_13_in_device_def192); 
					match(input,11,FOLLOW_11_in_device_def194); 
					pushFollow(FOLLOW_database_def_in_device_def196);
					database_def();
					state._fsp--;

					match(input,12,FOLLOW_12_in_device_def198); 
					}
					break;

				default :
					break loop6;
				}
			}

			match(input,14,FOLLOW_14_in_device_def215); 
			match(input,11,FOLLOW_11_in_device_def217); 
			// C:\\IoTSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:41:25: ( description_def )*
			loop7:
			while (true) {
				int alt7=2;
				int LA7_0 = input.LA(1);
				if ( (LA7_0==9) ) {
					alt7=1;
				}

				switch (alt7) {
				case 1 :
					// C:\\IoTSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:41:26: description_def
					{
					pushFollow(FOLLOW_description_def_in_device_def221);
					description_def();
					state._fsp--;

					}
					break;

				default :
					break loop7;
				}
			}

			match(input,12,FOLLOW_12_in_device_def226); 
			 context.currentNetwork.addDeviceObj();
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "device_def"



	// $ANTLR start "location_def"
	// C:\\IoTSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:45:1: location_def : CAPITALIZED_ID ':' ID ';' ;
	public final void location_def() throws RecognitionException {
		Token CAPITALIZED_ID1=null;
		Token ID2=null;

		try {
			// C:\\IoTSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:45:14: ( CAPITALIZED_ID ':' ID ';' )
			// C:\\IoTSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:46:5: CAPITALIZED_ID ':' ID ';'
			{
			CAPITALIZED_ID1=(Token)match(input,CAPITALIZED_ID,FOLLOW_CAPITALIZED_ID_in_location_def262); 
			match(input,11,FOLLOW_11_in_location_def264); 
			ID2=(Token)match(input,ID,FOLLOW_ID_in_location_def266); 
			match(input,12,FOLLOW_12_in_location_def268); 
			context.currentNetwork.addRegionLabel((CAPITALIZED_ID1!=null?CAPITALIZED_ID1.getText():null));
			    context.currentNetwork.addRegionValue((ID2!=null?ID2.getText():null));
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "location_def"



	// $ANTLR start "device_type"
	// C:\\IoTSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:52:1: device_type : CAPITALIZED_ID ;
	public final void device_type() throws RecognitionException {
		Token CAPITALIZED_ID3=null;

		try {
			// C:\\IoTSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:52:13: ( CAPITALIZED_ID )
			// C:\\IoTSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:53:6: CAPITALIZED_ID
			{
			CAPITALIZED_ID3=(Token)match(input,CAPITALIZED_ID,FOLLOW_CAPITALIZED_ID_in_device_type295); 
			context.currentNetwork.setDeviceType((CAPITALIZED_ID3!=null?CAPITALIZED_ID3.getText():null));
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "device_type"



	// $ANTLR start "abilities_def"
	// C:\\IoTSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:57:1: abilities_def : CAPITALIZED_ID ( ',' abilities_def )? ;
	public final void abilities_def() throws RecognitionException {
		Token CAPITALIZED_ID4=null;

		try {
			// C:\\IoTSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:57:15: ( CAPITALIZED_ID ( ',' abilities_def )? )
			// C:\\IoTSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:58:4: CAPITALIZED_ID ( ',' abilities_def )?
			{
			CAPITALIZED_ID4=(Token)match(input,CAPITALIZED_ID,FOLLOW_CAPITALIZED_ID_in_abilities_def314); 
			// C:\\IoTSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:58:19: ( ',' abilities_def )?
			int alt8=2;
			int LA8_0 = input.LA(1);
			if ( (LA8_0==10) ) {
				alt8=1;
			}
			switch (alt8) {
				case 1 :
					// C:\\IoTSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:58:20: ',' abilities_def
					{
					match(input,10,FOLLOW_10_in_abilities_def317); 
>>>>>>> f18db808215aa7c0212c33614ab0a8c9dea732b4
					pushFollow(FOLLOW_abilities_def_in_abilities_def319);
					abilities_def();
					state._fsp--;

<<<<<<< HEAD
				}
					break;

				}

				context.currentNetwork
						.addDeviceAbilities((CAPITALIZED_ID4 != null ? CAPITALIZED_ID4
								.getText() : null));

			}

		} catch (RecognitionException re) {
			reportError(re);
			recover(input, re);
		} finally {
			// do for sure before leaving
		}
	}

	// $ANTLR end "abilities_def"

	// $ANTLR start "protocol_value"
	// S:\\Thesis\\DevelopmentFramework\\ToolSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:66:1:
	// protocol_value : ID ;
	public final void protocol_value() throws RecognitionException {
		Token ID5 = null;

		try {
			// S:\\Thesis\\DevelopmentFramework\\ToolSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:66:15:
			// ( ID )
			// S:\\Thesis\\DevelopmentFramework\\ToolSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:67:3:
			// ID
			{
				ID5 = (Token) match(input, ID, FOLLOW_ID_in_protocol_value345);
				context.currentNetwork.setProtocol((ID5 != null ? ID5.getText()
						: null));
			}

		} catch (RecognitionException re) {
			reportError(re);
			recover(input, re);
		} finally {
			// do for sure before leaving
		}
	}

	// $ANTLR end "protocol_value"

	// $ANTLR start "description_def"
	// S:\\Thesis\\DevelopmentFramework\\ToolSuite\\IoTSuite\\src\\iotsuite\\parser\\NetworkSpec.g:71:1:
	// description_def : '\"' DESCRIPTION_ID '\"' ;
	public final void description_def() throws RecognitionException {
		Token DESCRIPTION_ID6 = null;
